# dwm_mod

./: .clang-format  .gitignore  CMakeLists.txt  config.h  drw.h  dwm.c  dwm.h
include/: client_window.hpp  config.h  display_connection.hpp  drawable.hpp  drawing_context.hpp  drw.h  dwm.h  error.hpp  event.hpp  font.hpp  graphics_context.hpp  list.hpp  monitor.hpp  pixmap.hpp  rectangle.hpp  types.hpp  window.hpp
include/themes/: default.h  dracula.h
src/: drw.c  dwm.c  dwm.cpp  main.cpp  util.c
themes/: dracula.h
